--- a/2-var-dan-tipedata.html
+++ b/2-var-dan-tipedata.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Belajar Javascript</title>
+    <title>Belajar Javascript | Variabel dan Tipedata </title>
 </head>
 
 <script>
@@ -24,7 +24,7 @@
     const pi = 3.14
     console.log(pi)
 
-    
+
 </script>
 
   
