--- a/3-perbandingan.html
+++ b/3-perbandingan.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Belajar javascript - Operator Perbandingan</title>
-</head>    
+    <title> Belajar javascript | Operator Perbandingan</title>
+</head>   
+
+<script>
+    console.log ('5 == "5" hasilnya: true, karena "5" dikonversi ke 5 (angka)')
+    console.log (5 == "5");
+
+    console.log ('0 == false hasilnya: true, karena false dikonversi ke 0')
+    console.log (0 == false);
+
+    console.log ('null == undefined hasilnya: true, karena dianggap saa')
+    console.log (null == undefined);
+
+    console.log ("'' == 0 hasilnya: true, karena '' dikonversi ke 0")
+    console.log('' == 0);
+
+    console.log('5 === "5" hasilnya: false, karena tipe data berbeda (angka dan string)')
+    console.log(5 === "5");
+
+    console.log('5 === "5" hasilnya: true, tipe data dan nilainya sama')
+    console.log(5 === 5);
+
+    console.log('null === undefined hasilnya: false, karena dianggap berbeda')
+    console.log(null === undefined);
+
+    console.log("'' === 0 hasilnya: false, karena tipe data berbeda (string dan angka)")
+    console.log('' === 0);
+    
+</script>
 </html>
