--- a/6-object.html
+++ b/6-object.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> ARRAY</title>
+    <title> Object</title>
 </head>
 
 <script>
@@ -29,6 +29,6 @@
 
     delete pengguna.hobi;
     console.log("Setelah menghapus hobi:", pengguna);
-    
+
 </script>
 </html>
